--- a/public/index.less
+++ b/public/index.less
@@ -7,6 +7,11 @@ h3 {
   text-decoration: underline;
 }
 
+hr {
+  background-color: orangered;
+  height: 2px;
+}
+
 // grid less
 .table-header {
   margin-bottom: 0px;
