--- a/public/index.less
+++ b/public/index.less
@@ -13,6 +13,19 @@ hr {
 }
 
 // grid less
-.table-header {
-  margin-bottom: 0px;
+.sorted-ascending {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid black;
+}
+
+.sorted-descending {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+
+  border-top: 5px solid black;
 }
