row click event

--- a/lib/grid.less
+++ b/lib/grid.less
@@ -35,6 +35,12 @@
 // body table
 .booty-body-table {
   overflow-y: auto;
+
+  table.table-hover {
+    tr {
+      cursor: pointer;
+    }
+  }
 }
 
 // footer table
