row deletion with demo

--- a/lib/grid.less
+++ b/lib/grid.less
@@ -70,3 +70,12 @@ table td[class*=col-], table th[class*=col-] {
     background-color: @color_table_header_row;
   }
 }
+
+.row-delete {
+  float: left;
+  > button.close {
+    font-size: 20px;
+    background-color: inherit;
+    margin-right: 5px;
+  }
+}
