import datepicker less file from datepicker from node module

--- a/less/grid.less
+++ b/less/grid.less
@@ -1,4 +1,4 @@
-@import 'datepicker.less';
+@import '../node_modules/booty-datepicker/style/datepicker';
 
 // variables
 @newRowButtonFontSize: 12px;
