add text alignment to cells

--- a/less/grid.less
+++ b/less/grid.less
@@ -13,6 +13,15 @@
   table {
     margin-bottom: 0px;
   }
+
+  .alignment-right {
+    text-align: right;
+  }
+
+  .alignment-center {
+    text-align: center;
+  }
+
 }
 
 // header table
