--- a/public/index.less
+++ b/public/index.less
@@ -1,3 +1,11 @@
+.github {
+  img {
+    width: 48px;
+  }
+  float: right;
+
+}
+
 h1 {
   text-align: center;
   text-decoration: underline;
@@ -13,7 +21,8 @@ hr {
 }
 
 @color_table_row_hover: #F5F7D3;
-@color-error: #843534;  // matches bootstrap error color
+@color-error: #843534;
+// matches bootstrap error color
 
 #error-bubble {
   position: absolute;
