fix table layout (css)

--- a/less/grid.less
+++ b/less/grid.less
@@ -12,6 +12,7 @@
   // set margin-bottom to zero, bootstrap has this set to 20px
   table {
     margin-bottom: 0px;
+    table-layout: fixed;
   }
 
   .alignment-right {
