be able to turn off borders

--- a/less/grid.less
+++ b/less/grid.less
@@ -26,6 +26,17 @@
   td {
     vertical-align: middle !important;
   }
+
+  table.no-borders {
+    border: none !important;
+    th, td {
+      border: none !important;
+    }
+    thead > tr {
+      text-decoration: underline;
+      background-color: inherit !important;
+    }
+  }
 }
 
 // header table
