prevent node tree icon showing when no children

--- a/less/grid.less
+++ b/less/grid.less
@@ -39,6 +39,10 @@
     &.tree-node-collapse {
       background-image: url("images/minus.png");
     }
+
+    &.tree-node-none {
+      background-image: none;
+    }
   }
 
   td {
