add the ability to return the classes for a cell

--- a/public/index.less
+++ b/public/index.less
@@ -55,3 +55,15 @@ hr {
   top: 57px !important;
   margin-left: 8px !important;
 }
+
+.make-cell-red {
+    background-color: red;
+}
+
+.make-cell-blue {
+    background-color: lightblue;
+}
+
+.make-cell-italic-font {
+    font-style: italic;
+}
